Changed method used to get first element of array